hangman image too short - fix try #1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@ body {
 	font-size: 18px;
 	line-height: 34px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	color: #777;
-}
+	color: #777;}
+
 .wrapper{
 	width:960px;
 	margin: 0 auto;
@@ -111,6 +111,10 @@ nav a {
 	height:100%;
 	border: 0 none;
 	opacity: .8;
+}
+.work a {
+	width: 100%;
+	height: 100%;
 }
 .work h3 {
 	border-bottom: 0;
